# VerusMinerDirect

./: .gitignore  INSTALL.md  Makefile.am  README.md  api.cpp  bignum.cpp  bignum.hpp  build.sh  ccminer.cpp  configure.ac  constants.h  hashlog.cpp  miner.cpp  miner.h  nvapi.cpp  pools.cpp  run  signal_handler.cpp  signal_handler.h  stats.cpp  sysinfos.cpp  types.h  uint256.h  util.cpp
.github/workflows/: codeql.yml
docs/: notes
src/: api.cpp  bignum.cpp  config.cpp  config.h  constants.h  daemon.cpp  daemon.h  hashlog.cpp  logging.cpp  logging.h  main.cpp  main.h  miner.cpp  miner.h  pool.cpp  pool.h  pools.cpp  signal_handler.cpp  stats.cpp  stratum.cpp  stratum.h  sysinfos.cpp  threading.cpp  threading.h  types.h  uint256.h  util.cpp  util.h  verus_stratum.cpp  verus_stratum.h  workio.cpp  workio.h
src/compat/: Makefile.am
src/verus/: clhash.cpp  equi-stratum.cpp  haraka.c  verus_clhash.cpp  verus_hash.cpp
verus/: clhash.cpp  equi-stratum.cpp  haraka.c  haraka.h  verus_clhash.cpp  verus_clhash.h  verus_hash.cpp  verusscan.cpp
